# auto-rl

./: .gitignore  README.md  agentlib.py  bootstrap.py  experiments.tsv  harness.py  orchestrator.py  program.md  pyproject.toml  selftest.py  train_rl.py
domains/gsm8k/: domain_card.json  prepare.py
domains/polymarket/: .locked  domain_card.json  prepare.py
domains/units/: .locked  domain_card.json  prepare.py
